crates/keron-lang/tests/corpus/errors/parse/reconcile_chain_missing_head.keron
val a: Symlink = symlink(source = "to-a", target = "from-a")
reconcile -> a
